# greedy-tokenizer

./: .gitignore  README.md  greedy_tokenizer.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: common.py  fast_tokenizer.py  greedy_fast_tokenizer.py  greedy_tokenizer.py  slow_tokenizer.py
tests/: test_greedy_tokenizer.py
